--- a/ar-playground/index.html
+++ b/ar-playground/index.html
@@ -15,8 +15,9 @@
             <a-asset-item id="animated-asset" src="https://raw.githubusercontent.com/nicolocarpignoli/nicolocarpignoli.github.io/master/ar-playground/models/CesiumMan.gltf"></a-asset-item>
         </a-assets>
 
-        <a-marker type="pattern" preset="custom" url="....">
-            <a-box position='0 0.5 0' color="yellow"></a-box>
+        <a-marker type="pattern" preset="custom" url="https://github.com/Deiag18/nicolocarpignoli.github.io/blob/master/ar-playground/pattern-Screen%20Shot%202020-01-30%20at%2010.19.38%20AM.patt">
+         <a-marker>
+    <a-video duane></a-video>
         </a-marker>
 
         <a-marker id="animated-marker" type='barcode' value='6'>
