--- a/ar-playground/index.html
+++ b/ar-playground/index.html
@@ -13,14 +13,11 @@
 
         <a-assets>
             <a-asset-item id="animated-asset" src="https://raw.githubusercontent.com/nicolocarpignoli/nicolocarpignoli.github.io/master/ar-playground/models/CesiumMan.gltf"></a-asset-item>
-             <video src="duane.mp4" preload="auto"></video>
         </a-assets>
 
-        <a-marker type="pattern" preset="custom" url="https://github.com/Deiag18/nicolocarpignoli.github.io/blob/master/ar-playground/pattern-Screen%20Shot%202020-01-30%20at%2010.19.38%20AM.patt">
-         <a-entity>
-    <a-video duane></a-video>
-        </a-entity>
-            </a-marker>
+        <a-marker type='barcode' value='7'>
+            <a-box position='0 0.5 0' color="yellow"></a-box>
+        </a-marker>
 
         <a-marker id="animated-marker" type='barcode' value='6'>
             <a-entity
