--- a/ar-playground/index.html
+++ b/ar-playground/index.html
@@ -13,10 +13,11 @@
 
         <a-assets>
             <a-asset-item id="animated-asset" src="https://raw.githubusercontent.com/nicolocarpignoli/nicolocarpignoli.github.io/master/ar-playground/models/CesiumMan.gltf"></a-asset-item>
+             <video id="duane" src="duane.mp4"></video>
         </a-assets>
 
         <a-marker type='barcode' value='7'>
-            <a-box position='0 0.5 0' color="yellow"></a-box>
+            <a-video duane></a-video>
         </a-marker>
 
         <a-marker id="animated-marker" type='barcode' value='6'>
