--- a/ar-playground/index.html
+++ b/ar-playground/index.html
@@ -11,12 +11,12 @@
         <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers -->
         <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
 
-         <a-assets>
-            <video id="duane-vid" autoplay loop="true" src="https://github.com/Deiag18/deiag18.github.io/blob/master/duane.mp4"></video>
+        <a-assets>
+            <video id="duane" autoplay loop="true" src="duane.mp4"></video>
         </a-assets>
 
         <a-marker type='barcode' value='7'>
-       <a-video src="#duane-vid" width="16" height="9" position="0 0 -20"></a-video>
+            <a-video src="#duane" width="16" height="9" position="0 0 -20"></a-video>
         </a-marker>
 
         <a-marker id="animated-marker" type='barcode' value='6'>
