--- a/ar-playground/index.html
+++ b/ar-playground/index.html
@@ -12,10 +12,10 @@
         <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
 
         <a-assets>
-            <video id="duane" autoplay loop="true" src="duane.mp4"></video>
+            <video id="duane" autoplay loop="true" src="https://github.com/Deiag18/nicolocarpignoli.github.io/blob/master/ar-playground/duane.mp4"></video>
         </a-assets>
 
-        <a-marker type='barcode' value='7'>
+        <a-marker id="duane" type='barcode' value='7'>
             <a-video src="#duane" width="16" height="9" position="0 0 -20"></a-video>
         </a-marker>
 
