--- a/ar-playground/index.html
+++ b/ar-playground/index.html
@@ -16,7 +16,7 @@
         </a-assets>
 
         <a-marker id="duane" type='barcode' value='7'>
-            <a-video src="#duane" width="16" height="9" position="0 0 -20"></a-video>
+             <a-plane src="#duane" height="50" width="100" rotation="-90 0 0"></a-plane>
         </a-marker>
 
         <a-marker id="animated-marker" type='barcode' value='6'>
